--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
     <string name="app_name">RetroCollection</string>
-    <string name="btnGames">Games</string>
     <string name="TextGame">My games</string>
     <string name="title_activity_games">Games</string>
     <string name="buttonAddGame">Add</string>
+    <string name="title_activity_etagere">Collection</string>
+    <string name="menu_ic1">Statistics</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="menu_princip">My collection</string>
+    <string name="menu_Sec">The greatest collection</string>
 </resources>
